Se agregarón endpoints y se mappearon clases